--- a/app/src/main/res/layout/users_view.xml
+++ b/app/src/main/res/layout/users_view.xml
@@ -10,7 +10,7 @@
 
     <ImageView
         android:id="@+id/profileImg"
-        android:layout_width="match_parent"
+        android:layout_width="57dp"
         android:layout_height="50dp"
         android:layout_weight="70"
         android:gravity="center"
@@ -19,48 +19,14 @@
 
     <TextView
         android:id="@+id/userView"
-        android:layout_width="338dp"
+        android:layout_width="185dp"
         android:layout_height="40dp"
-        android:textSize="30dp"
-        android:textStyle="bold"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
         android:layout_weight="30"
         android:text="UserName"
-        />
-
-    <ImageView
-        android:id="@+id/imgOn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/userView"
-        android:layout_marginLeft="-15dp"
-        android:layout_marginTop="10dp"
-        android:layout_toEndOf="@id/profileImg"
-        android:layout_toRightOf="@id/profileImg"
-        android:src="@mipmap/ic_launcher"
-        android:visibility="gone"/>
-        <!--app:civ_border_color="#o5df29"-->
-        <!--app:civ_border_width="10dp"-->
-
-
-
-
-    <ImageView
-        android:id="@+id/imgOff"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/userView"
-        android:layout_marginLeft="-15dp"
-        android:layout_marginTop="10dp"
-        android:layout_toEndOf="@id/profileImg"
-        android:layout_toRightOf="@id/profileImg"
-        android:src="@mipmap/ic_launcher"
-        android:visibility="gone"/>
-        <!--android:="#bfbfbf"-->
-        <!--app:civ_border_width="10dp"-->
-
-
+        android:textSize="30dp"
+        android:textStyle="bold" />
 
 
 </LinearLayout>
