--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,18 @@
     </style>
 
     <style name="MenuStyle" parent="Theme.AppCompat.Light">
-        
         <item name="android:background">@android:color/white</item>
     </style>
+    
+    <style name="AppTheme.noActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <!--<style name="Theme.AppCompat.Light.FullScreen" parent="@style/Theme.AppCompat.Light.NoActionBar">-->
+        <!--<item name="android:windowNoTitle">false</item>-->
+        <!--<item name="android:windowActionBar">true</item>-->
+        <!--<item name="android:windowFullscreen">true</item>-->
+        <!--<item name="android:windowContentOverlay">@null</item>-->
+    <!--</style>-->
 </resources>
