--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -5,33 +5,35 @@
     android:padding="0dp"
     android:layout_height="wrap_content">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:id="@+id/profileImg"
-        android:src="@drawable/ic_person_black_24dp"
+        android:background="@mipmap/ic_launcher_round"
         android:visibility="gone"
         />
 
     <TextView
         android:id="@+id/show_msg"
-        android:textSize="25dp"
-        android:layout_width="wrap_content"
+        android:layout_width="68dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/backgroud_left"
-        android:layout_toRightOf="@+id/profileImg"
-        android:layout_marginLeft="5dp"
-        android:text="hello"
-        android:padding="5dp"
         android:layout_marginBottom="5dp"
-        />
+        android:layout_marginLeft="-1dp"
+        android:layout_toRightOf="@+id/profileImg"
+        android:background="@drawable/backgroud_left"
+        android:padding="5dp"
+        android:text="hello"
+        android:textSize="25dp" />
 
     <TextView
-        android:id="@+id/seen"
+        android:id="@+id/seenk"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="18dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:visibility="gone"
-        android:layout_below="@id/show_msg"
-        />
+        android:layout_below="@+id/show_msg"
+        android:layout_marginTop="-5dp"
+        android:text="seen" />
 
 </RelativeLayout>
