--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -10,11 +10,11 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:id="@+id/profileImg"
-            android:src="@drawable/ic_person_black_24dp"
+            android:src="@mipmap/ic_launcher_round"
             android:visibility="gone"
             />
         <TextView
@@ -31,7 +31,7 @@
             android:layout_marginBottom="5dp"/>
 
         <TextView
-            android:id="@+id/seen"
+            android:id="@+id/seenTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
