--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -15,7 +15,7 @@
 
     <TextView
         android:id="@+id/show_msg"
-        android:layout_width="68dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="-1dp"
@@ -26,7 +26,7 @@
         android:textSize="25dp" />
 
     <TextView
-        android:id="@+id/seenk"
+        android:id="@+id/seenTxt"
         android:layout_width="wrap_content"
         android:layout_height="18dp"
         android:layout_alignParentStart="true"
